[Prog] Add Game UI

--- a/LichRunner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/LichRunner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -126,6 +126,19 @@ bTimelineDisplayCurveKeys=False
 TimelineEnabledSnaps=CompositeSegment
 TimelineEnabledSnaps=MontageSection
 
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 BoxComponent=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,
@@ -220,20 +233,21 @@ StaticMeshComponent=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValu
 StaticMeshActor=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,
 CapsuleComponent=CapsuleComponent.Collision.Collision,
 BP_RunCharacter_C=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.Pickups,
-BP_RunPlayerController_C=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,
+BP_RunPlayerController_C=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.Pickups,
 K2Node_VariableSet=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.Pickups,
 K2Node=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.Pickups,
 K2Node_CallFunction=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.Pickups,
 SkeletalMeshComponent=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,
 SetActiveVisual_8=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,
 SetActiveVisual=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,
-BP_RunGameMode_C=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,
+BP_RunGameMode_C=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.Pickups,
 MulticastInlineDelegatePropertyWrapper=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,
 K2Node_CustomEvent=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,
 BP_ItemPickup_C=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.Pickups,
 LinearColor=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,
 NiagaraFloat=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,
 NiagaraComponent=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,
+K2Node_FunctionResult=BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Obstacles,K2Node_VariableGet.DefaultValueCategory.Obstacles,PropertyWrapper.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.DeathExplosionSound,K2Node_VariableGet.DefaultValueCategory.Pickups,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -253,7 +267,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Actors
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -309,6 +323,7 @@ OpenAssetsAtExit=/Game/Blueprints/Actors/Characters/ABP_RunCharacterHorse.ABP_Ru
 OpenAssetsAtExit=/Game/Blueprints/Actors/Characters/ABP_RunCharacterRider.ABP_RunCharacterRider
 OpenAssetsAtExit=/Game/Blueprints/Actors/BP_FloorTile.BP_FloorTile
 OpenAssetsAtExit=/Game/Blueprints/Interfaces/BPI_Hit.BPI_Hit
+OpenAssetsAtExit=/Game/Blueprints/Actors/Pickups/TypePickupEnum.TypePickupEnum
 OpenAssetsAtExit=/Game/Blueprints/Actors/Pickups/BP_ItemPickup.BP_ItemPickup
 OpenAssetsAtExit=/Game/Audio/coin_Cue.coin_Cue
 OpenAssetsAtExit=/Game/Blueprints/Actors/Pickups/BP_ItemPickup_01.BP_ItemPickup_01
@@ -330,7 +345,7 @@ WorldSettings=
 Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 AssetViewerSettings="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -340,7 +355,7 @@ SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" \"Object.Niagara.TemplateParameterOverrides.TemplateParameterOverrides[0]\" "
 SceneComponent="\"Object\" \"Object.Niagara.TemplateParameterOverrides.TemplateParameterOverrides[0]\" "
-ActorComponent="\"Object\" \"Object.Niagara.TemplateParameterOverrides.TemplateParameterOverrides[0]\" "
+ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
@@ -479,28 +494,36 @@ SphereComponent="\"Object\" "
 SoundCue="\"Object\" "
 SoundBase="\"Object\" "
 NiagaraBakerSettings="\"Object\" "
+CanvasPanel="\"Object\" "
+PanelWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
+WBP_CoinsDisplay_C="\"Object\" "
+UserWidget="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Actors/Pickups/TypePickupEnum
-MRUItem1=/Game/Blueprints/Actors/Pickups/BP_ItemPickup_02
-MRUItem2=/Game/Blueprints/Actors/Pickups/BP_ItemPickup_01
-MRUItem3=/Game/Audio/coin_Cue
-MRUItem4=/Game/sA_PickupSet_1/Fx/NiagaraSystems/NS_Pickup_1
-MRUItem5=/Game/sA_PickupSet_1/Blueprints/BP_RAY_Spawner
-MRUItem6=/Game/Blueprints/Actors/Pickups/BP_ItemPickup
-MRUItem7=/Game/Audio/Hit/Mono/Fire_Hit_1_M_Cue
-MRUItem8=/Game/FXVarietyPack/Blueprints/BP_ky_explosion
-MRUItem9=/Game/Blueprints/Interfaces/BPI_Hit
-MRUItem10=/Game/ImportedAssets/Environment/Edge_Nature_Stylized_Forest/Models/Stones/SM_Stone_Rune_04
-MRUItem11=/Game/Blueprints/Actors/BP_RockObstacle_02
-MRUItem12=/Game/Blueprints/Actors/BP_RockObstacle
-MRUItem13=/Game/Blueprints/Actors/BP_Obstacle
-MRUItem14=/Game/Blueprints/Actors/BP_FloorTile
-MRUItem15=/Game/Blueprints/Actors/ABP_RunCharacterRider
-MRUItem16=/Game/Blueprints/Actors/ABP_RunCharacterHorse
-MRUItem17=/Game/Blueprints/GameModes/BP_RunGameMode
-MRUItem18=/Game/Blueprints/Controllers/BP_RunPlayerController
-MRUItem19=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/Blueprints/WidgetBlueprints/WBP_CoinsDisplay
+MRUItem1=/Game/Blueprints/Actors/Pickups/TypePickupEnum
+MRUItem2=/Game/Blueprints/Actors/Pickups/BP_ItemPickup_02
+MRUItem3=/Game/Blueprints/Actors/Pickups/BP_ItemPickup_01
+MRUItem4=/Game/Audio/coin_Cue
+MRUItem5=/Game/sA_PickupSet_1/Fx/NiagaraSystems/NS_Pickup_1
+MRUItem6=/Game/sA_PickupSet_1/Blueprints/BP_RAY_Spawner
+MRUItem7=/Game/Blueprints/Actors/Pickups/BP_ItemPickup
+MRUItem8=/Game/Audio/Hit/Mono/Fire_Hit_1_M_Cue
+MRUItem9=/Game/FXVarietyPack/Blueprints/BP_ky_explosion
+MRUItem10=/Game/Blueprints/Interfaces/BPI_Hit
+MRUItem11=/Game/ImportedAssets/Environment/Edge_Nature_Stylized_Forest/Models/Stones/SM_Stone_Rune_04
+MRUItem12=/Game/Blueprints/Actors/BP_RockObstacle_02
+MRUItem13=/Game/Blueprints/Actors/BP_RockObstacle
+MRUItem14=/Game/Blueprints/Actors/BP_Obstacle
+MRUItem15=/Game/Blueprints/Actors/BP_FloorTile
+MRUItem16=/Game/Blueprints/Actors/ABP_RunCharacterRider
+MRUItem17=/Game/Blueprints/Actors/ABP_RunCharacterHorse
+MRUItem18=/Game/Blueprints/GameModes/BP_RunGameMode
+MRUItem19=/Game/Blueprints/Controllers/BP_RunPlayerController
 
 [DetailCategories]
 AnimMontage.Animation=True
@@ -1271,6 +1294,36 @@ BP_ItemPickup_02_C.WorldPartition=True
 BP_ItemPickup_02_C.Events=True
 UserDefinedEnum.Description=True
 UserDefinedEnum.Enumerators=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+WBP_CoinsDisplay_C.Appearance=True
+WBP_CoinsDisplay_C.Designer=True
+WBP_CoinsDisplay_C.Input=True
+WBP_CoinsDisplay_C.Interaction=True
+WBP_CoinsDisplay_C.Performance=True
+WBP_CoinsDisplay_C.Layout=True
+WBP_CoinsDisplay_C.Behavior=True
+WBP_CoinsDisplay_C.Render Transform=True
+WBP_CoinsDisplay_C.Localization=True
+WBP_CoinsDisplay_C.Accessibility=True
+WBP_CoinsDisplay_C.Clipping=True
+WBP_CoinsDisplay_C.Navigation=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1347,4 +1400,66 @@ Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
 ChangeVariableType_Warning=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
