[Prog / Art] Correctifs + Set Game Map

--- a/LichRunner/Config/DefaultEngine.ini
+++ b/LichRunner/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=LichRunner
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/RunMap.RunMap
-GameDefaultMap=/Game/Maps/RunMap.RunMap
+EditorStartupMap=/Game/Maps/RunVillageMap.RunVillageMap
+GameDefaultMap=/Game/Maps/RunVillageMap.RunVillageMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
