--- a/LichRunner/Saved/Config/WindowsEditor/Engine.ini
+++ b/LichRunner/Saved/Config/WindowsEditor/Engine.ini
@@ -31,6 +31,7 @@ Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 Paths=../../../Engine/Plugins/MovieScene/SequencerScripting/Content
 Paths=../../../Engine/Plugins/Marketplace/NiagaraUIRenderer/Content
 Paths=../../../Engine/Plugins/Marketplace/LowEntryExtStdLib/Content
+Paths=../../../Engine/Plugins/Marketplace/Prefabricator/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
@@ -64,4 +65,12 @@ DeviceGroup=(Id="8B6900294A204155F87A7BA18C4EB272", Name="New Group 0", Devices=
 
 [FProjectLauncher]
 AdvancedMode=False
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
