[Prog] Manage Assets

--- a/LichRunner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/LichRunner/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1046,9 +1046,15 @@ Voice.TimeStamp=2022.10.15-09.43.27
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.10.15-09.43.03
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.10.15-09.42.38
+BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript.BP_RockObstacleScript
+OpenAssetsAtExit=/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_02.BP_RockObstacleScript_02
+OpenAssetsAtExit=/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_03.BP_RockObstacleScript_03
+OpenAssetsAtExit=/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_04.BP_RockObstacleScript_04
 
 [DetailCategories]
 BP_TerrainActor_C.TransformCommon=True
@@ -1059,6 +1065,157 @@ BP_TerrainActor_C.Collision=True
 BP_TerrainActor_C.HLOD=True
 BP_TerrainActor_C.Input=True
 BP_TerrainActor_C.Actor=True
+PrefabActor.TransformCommon=True
+PrefabActor.Prefab Asset Actions=True
+PrefabActor.Prefabricator=True
+PrefabActor.Rendering=True
+PrefabActor.Tags=True
+PrefabActor.Activation=True
+PrefabActor.Collision=True
+PrefabActor.Cooking=True
+PrefabActor.Replication=True
+PrefabActor.HLOD=True
+PrefabActor.Input=True
+PrefabActor.Actor=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+BP_PROP_brazier_01_C.TransformCommon=True
+BP_PROP_brazier_01_C.Rendering=True
+BP_PROP_brazier_01_C.Replication=True
+BP_PROP_brazier_01_C.Collision=True
+BP_PROP_brazier_01_C.HLOD=True
+BP_PROP_brazier_01_C.Input=True
+BP_PROP_brazier_01_C.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Planet=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Atmosphere - Rayleigh=True
+AtmosphericFog.Atmosphere - Mie=True
+AtmosphericFog.Atmosphere - Absorption=True
+AtmosphericFog.Art Direction=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+BP_RockObstacleScript_C.TransformCommon=True
+BP_RockObstacleScript_C.StaticMesh=True
+BP_RockObstacleScript_C.Materials=True
+BP_RockObstacleScript_C.Tick=True
+BP_RockObstacleScript_C.ComponentTick=True
+BP_RockObstacleScript_C.Physics=True
+BP_RockObstacleScript_C.Collision=True
+BP_RockObstacleScript_C.Lighting=True
+BP_RockObstacleScript_C.HLOD=True
+BP_RockObstacleScript_C.Rendering=True
+BP_RockObstacleScript_C.Navigation=True
+BP_RockObstacleScript_C.VirtualTexture=True
+BP_RockObstacleScript_C.Tags=True
+BP_RockObstacleScript_C.ComponentReplication=True
+BP_RockObstacleScript_C.Variable=True
+BP_RockObstacleScript_C.Cooking=True
+BP_RockObstacleScript_C.Components=True
+BP_RockObstacleScript_C.Replication=True
+BP_RockObstacleScript_C.Actor=True
+BP_RockObstacleScript_C.Input=True
+BP_RockObstacleScript_C.WorldPartition=True
+BP_RockObstacleScript_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BP_RockObstacleScript_02_C.TransformCommon=True
+BP_RockObstacleScript_02_C.StaticMesh=True
+BP_RockObstacleScript_02_C.Materials=True
+BP_RockObstacleScript_02_C.Tick=True
+BP_RockObstacleScript_02_C.ComponentTick=True
+BP_RockObstacleScript_02_C.Physics=True
+BP_RockObstacleScript_02_C.Collision=True
+BP_RockObstacleScript_02_C.Lighting=True
+BP_RockObstacleScript_02_C.HLOD=True
+BP_RockObstacleScript_02_C.Rendering=True
+BP_RockObstacleScript_02_C.Navigation=True
+BP_RockObstacleScript_02_C.VirtualTexture=True
+BP_RockObstacleScript_02_C.Tags=True
+BP_RockObstacleScript_02_C.ComponentReplication=True
+BP_RockObstacleScript_02_C.Variable=True
+BP_RockObstacleScript_02_C.Cooking=True
+BP_RockObstacleScript_02_C.Components=True
+BP_RockObstacleScript_02_C.Replication=True
+BP_RockObstacleScript_02_C.Actor=True
+BP_RockObstacleScript_02_C.Input=True
+BP_RockObstacleScript_02_C.WorldPartition=True
+BP_RockObstacleScript_02_C.Events=True
+BP_RockObstacleScript_03_C.TransformCommon=True
+BP_RockObstacleScript_03_C.StaticMesh=True
+BP_RockObstacleScript_03_C.Materials=True
+BP_RockObstacleScript_03_C.Tick=True
+BP_RockObstacleScript_03_C.ComponentTick=True
+BP_RockObstacleScript_03_C.Physics=True
+BP_RockObstacleScript_03_C.Collision=True
+BP_RockObstacleScript_03_C.Lighting=True
+BP_RockObstacleScript_03_C.HLOD=True
+BP_RockObstacleScript_03_C.Rendering=True
+BP_RockObstacleScript_03_C.Navigation=True
+BP_RockObstacleScript_03_C.VirtualTexture=True
+BP_RockObstacleScript_03_C.Tags=True
+BP_RockObstacleScript_03_C.ComponentReplication=True
+BP_RockObstacleScript_03_C.Variable=True
+BP_RockObstacleScript_03_C.Cooking=True
+BP_RockObstacleScript_03_C.Components=True
+BP_RockObstacleScript_03_C.Replication=True
+BP_RockObstacleScript_03_C.Actor=True
+BP_RockObstacleScript_03_C.Input=True
+BP_RockObstacleScript_03_C.WorldPartition=True
+BP_RockObstacleScript_03_C.Events=True
+BP_RockObstacleScript_04_C.TransformCommon=True
+BP_RockObstacleScript_04_C.StaticMesh=True
+BP_RockObstacleScript_04_C.Materials=True
+BP_RockObstacleScript_04_C.Tick=True
+BP_RockObstacleScript_04_C.ComponentTick=True
+BP_RockObstacleScript_04_C.Physics=True
+BP_RockObstacleScript_04_C.Collision=True
+BP_RockObstacleScript_04_C.Lighting=True
+BP_RockObstacleScript_04_C.HLOD=True
+BP_RockObstacleScript_04_C.Rendering=True
+BP_RockObstacleScript_04_C.Navigation=True
+BP_RockObstacleScript_04_C.VirtualTexture=True
+BP_RockObstacleScript_04_C.Tags=True
+BP_RockObstacleScript_04_C.ComponentReplication=True
+BP_RockObstacleScript_04_C.Variable=True
+BP_RockObstacleScript_04_C.Cooking=True
+BP_RockObstacleScript_04_C.Components=True
+BP_RockObstacleScript_04_C.Replication=True
+BP_RockObstacleScript_04_C.Actor=True
+BP_RockObstacleScript_04_C.Input=True
+BP_RockObstacleScript_04_C.WorldPartition=True
+BP_RockObstacleScript_04_C.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1079,7 +1236,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Projets GIT/LichRunner-EndlessRunnerUnreal/LichRunner/Content/
+UNR=../../../../../Projets GIT/LichRunner-EndlessRunnerUnreal/LichRunner/Content/Maps
 BRUSH=../../../../../Projets GIT/LichRunner-EndlessRunnerUnreal/LichRunner/Content/
 FBX=../../../../../Projets GIT/LichRunner-EndlessRunnerUnreal/LichRunner/Content/
 FBXAnim=../../../../../Projets GIT/LichRunner-EndlessRunnerUnreal/LichRunner/Content/
@@ -1095,4 +1252,89 @@ Project=D:/Jeux/UE_5.0/
 [Python]
 LastDirectory=
 RecentsFiles=D:/Jeux/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[MRU]
+MRUItem0=/Game/Maps/RunVillageMap
+
+[ContentBrowser]
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.Locked=False
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.ActiveTypeFilters=
+ContentBrowserDrawer.EnabledTypeFilters=
+ContentBrowserDrawer.ActiveFrontendFilters=
+ContentBrowserDrawer.EnabledFrontendFilters=
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Actors/Obstacles
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_04
+MRUItem1=/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_03
+MRUItem2=/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_02
+MRUItem3=/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript
+
+[AssetEditorToolkitTabLocation]
+/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript.BP_RockObstacleScript=1
+/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_02.BP_RockObstacleScript_02=1
+/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_03.BP_RockObstacleScript_03=1
+/Game/Blueprints/Actors/Obstacles/BP_RockObstacleScript_04.BP_RockObstacleScript_04=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
